# elementary_visualizer

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  cassini_oval.cpp  circles.cpp  gabriels_horn.cpp  game_of_life.cpp  lines_cap.cpp  lorenz_attractor.cpp  surface_mode.cpp  translucent_helix.cpp  wave.cpp  wireframe.cpp
include/elementary_visualizer/: elementary_visualizer.hpp  event_values.hpp
src/: av_resources.cpp  av_resources.hpp  elementary_visualizer.cpp  entity.cpp  entity.hpp  gl_resources.cpp  gl_resources.hpp  gl_shader_program.cpp  gl_shader_program.hpp  glfw_resources.cpp  glfw_resources.hpp  scene.cpp  scene.hpp  shader_sources.cpp  shader_sources.hpp  shader_sources_circle.cpp  shader_sources_depth_peeling.cpp  shader_sources_line_cap.cpp  shader_sources_lines.cpp  shader_sources_linesegments.cpp  shader_sources_quad.cpp  shader_sources_surface.cpp  surface_data.cpp  video.cpp  video.hpp  visuals.cpp  visuals.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt  depth_peeling_test.cpp  linesegments_test.cpp  scene_anti_aliasing_test.cpp  simple_scene_test.cpp  simple_window_test.cpp  surface_test.cpp  test_utilities.cpp  test_utilities.hpp  window_keyboard_event_test.cpp  window_mouse_event_test.cpp  window_render_test.cpp  window_size_test.cpp
